# HelloWorldJNI

./: .gitignore  CMakeLists.txt  заметки.txt
include/: HelloWorldJNI.h  dll.h  library.h
src/: CMakeLists.txt  HelloWorldJNI.cpp  library.cpp
